# apps

./: Dockerfile  README.md  dates.py  docker-compose.yml  get_stock_info.py  holiday.py  lotto.py  names.py  pyproject.toml  timer.py
.github/workflows/: lint.yml  test.yml
assets/: db_models.py  ddl.py  names.db  pg_models.py  sqlite_models.py
config/: pyproject.toml
tests/: test_dates.py  test_timer.py
